@@ -2,6 +2,17 @@
 
 ## Version 0.7.0
 - Geoff's major refactorings fork re-merged back into the trunk
+- Improved the build process allowing developers to override things in local.properties
+- Added a packaging task to generate a zip file for a build
+- SQL Server Default value now supports non-quoted functions and NULL
+- Compound Primary Key bug was unsetting NotNull from all the columns has been fixed
+- Added a Visual Studio Template that can be installed to help create new Migrations
+- Various Small bug fixes
+	- Logger set after Migrations loaded in NAnt/MSBuild tasks
+	- Patch for wrong string format in SQLTransformationProvider
+	- One of the TranformationProvider.GenerateForeignKey methods ignores constraint
+	- No warning is issued if there are no migrations found
+	- Migration.InitializeOnce outputs to console
 
 ## Version 0.6.0
 - Better API documentation
